--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -74,6 +74,7 @@
             app:layout_constraintVertical_bias="0.272" />
 
         <TextView
+            android:textColor="#8E8E8E"
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -84,6 +85,7 @@
             app:layout_constraintTop_toBottomOf="@+id/button" />
 
         <TextView
+            android:textColor="#8E8E8E"
             android:id="@+id/registerLink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
