--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -91,6 +91,7 @@
             app:layout_constraintVertical_bias="0.419" />
 
         <TextView
+            android:textColor="#8E8E8E"
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -102,6 +103,7 @@
 
         <TextView
             android:id="@+id/loginLink"
+            android:textColor="#8E8E8E"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Login here"
