--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
+        <item name="android:textColor">@color/teal_200</item>
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
@@ -14,6 +15,9 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="text">
+        <item name="android:textColor">@color/teal_200</item>
+    </style>
 
     <style name="form">
         <item name="backgroundColor">@color/teal_200</item>
