--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -11,6 +11,7 @@
     android:focusable="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
         android:layout_width="302dp"
         android:layout_height="413dp"
         android:background="@drawable/radius"
@@ -24,10 +25,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:backgroundTint="@color/black"
             android:ems="10"
             android:hint="Enter Email"
             android:inputType="textEmailAddress"
-            android:backgroundTint="@color/black"
             android:textColor="#292828"
             android:textColorHint="#8C8B8B"
             app:layout_constraintBottom_toTopOf="@+id/passwordForm"
@@ -38,10 +39,10 @@
             android:id="@+id/passwordForm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:layout_marginBottom="8dp"
-            android:hint="Enter Password"
             android:backgroundTint="@color/black"
+            android:ems="10"
+            android:hint="Enter Password"
             android:inputType="textPassword"
             android:textColor="#393737"
             android:textColorHint="#8C8B8B"
@@ -91,22 +92,22 @@
             app:layout_constraintVertical_bias="0.419" />
 
         <TextView
-            android:textColor="#8E8E8E"
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Already Have an account??"
+            android:textColor="#8E8E8E"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button" />
 
         <TextView
             android:id="@+id/loginLink"
-            android:textColor="#8E8E8E"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Login here"
+            android:textColor="#8E8E8E"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
@@ -115,5 +116,16 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="226dp"
+        android:layout_height="67dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/logo" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
