--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -55,6 +55,7 @@
             android:id="@+id/passwordForm2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:backgroundTint="@color/black"
             android:ems="10"
             android:hint="Retype Password"
@@ -88,14 +89,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordForm"
-            app:layout_constraintVertical_bias="0.419" />
+            app:layout_constraintTop_toBottomOf="@+id/passwordForm2"
+            app:layout_constraintVertical_bias="0.272" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="8dp"
             android:text="Already Have an account??"
             android:textColor="#8E8E8E"
             app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +114,6 @@
             app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
