--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -7,7 +7,8 @@
         android:id="@+id/mealTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="24dp"
+        android:textSize="24sp"
+        android:paddingStart="32dp"
         android:paddingVertical="10dp"/>
 
 </LinearLayout>
