--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -40,4 +40,9 @@
         android:name="com.example.healthmaxx.ui.foodDiary.FoodDiaryFragment"
         android:label="fragment_food_diary"
         tools:layout="@layout/fragment_food_diary" />
+    <fragment
+        android:id="@+id/addFoodFragment"
+        android:name="com.example.healthmaxx.ui.addFood.addFoodFragment"
+        android:label="fragment_add_food"
+        tools:layout="@layout/fragment_add_food" />
 </navigation>
