--- a/app/src/main/res/layout/list_child.xml
+++ b/app/src/main/res/layout/list_child.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/mealName"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="24dp"
-        android:paddingVertical="10dp" />
+        >
 
-    <TextView
-        android:id="@+id/mealCalories"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="24dp"
-        android:paddingVertical="10dp" />
+        <TextView
+            android:id="@+id/mealName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingHorizontal="24dp"
+            android:paddingVertical="10dp"
+            android:text="Bread" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/mealCalories"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginEnd="0dp"
+            android:layout_toEndOf="@+id/mealName"
+            android:gravity="end"
+            android:paddingHorizontal="24dp"
+            android:paddingVertical="10dp"
+            android:text="100" />
+
+    </LinearLayout>
+
+</RelativeLayout>
