--- a/app/src/main/res/layout/fragment_add_food.xml
+++ b/app/src/main/res/layout/fragment_add_food.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.addFood.addFoodFragment">
+    tools:context=".ui.addFood.AddFoodFragment">
 
     <android.widget.SearchView
         android:id="@+id/searchView"
