--- a/app/src/main/res/layout/dialog_food_details.xml
+++ b/app/src/main/res/layout/dialog_food_details.xml
@@ -71,6 +71,7 @@
             android:layout_alignStart="@+id/spinner"
             android:layout_marginTop="5dp"
             android:hint="100"
+            android:text="100"
             android:padding="4dp"
             android:textSize="16sp" />
 
