--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.home.HomeFragment">
 
     <TextView
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:id="@+id/text_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -119,6 +120,64 @@
                 app:layout_constraintTop_toBottomOf="@+id/stepProgressIndicator" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="8dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+
+        <TextView
+            android:padding="10dp"
+            android:textSize="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="How are you feeling today?"/>
+
+        <LinearLayout
+            android:layout_gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:paddingTop="8dp"
+            android:paddingHorizontal="20dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:tint="#828A91"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/face_smile_solid"
+                android:layout_marginEnd="8dp">
+            </ImageView>
+
+            <ImageView
+                android:tint="#828A91"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/face_meh_solid"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp">
+            </ImageView>
+
+            <ImageView
+                android:tint="#828A91"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/face_frown_solid"
+                android:layout_marginStart="8dp">
+            </ImageView>
+
+        </LinearLayout>
+
 
 
     </LinearLayout>
