--- a/app/src/main/res/layout/fragment_calculate_b_m_r.xml
+++ b/app/src/main/res/layout/fragment_calculate_b_m_r.xml
@@ -20,6 +20,106 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <LinearLayout
+            android:id="@+id/linearLayout6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+            <EditText
+                android:id="@+id/heightForm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#000000"
+                android:hint="Height"
+                android:inputType="number"
+                android:textColor="@color/black"
+                android:textColorHint="#8C8C8C"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="cm"
+                android:textColor="#000000" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout7"
+            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/linearLayout6">
+
+
+            <EditText
+                android:id="@+id/weightForm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#000000"
+                android:hint="Weight"
+                android:inputType="number"
+                android:textColor="@color/black"
+                android:textColorHint="#8C8C8C"
+                android:textSize="16sp"
+                tools:layout_editor_absoluteY="56dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="kg"
+                android:textColor="#000000"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="48dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/linearLayout7">
+
+            <EditText
+                android:id="@+id/ageForm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#000000"
+                android:hint="Age"
+                android:inputType="number"
+                android:textColor="@color/black"
+                android:textColorHint="#8C8C8C"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/weightForm" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="Years"
+                android:textColor="#000000"
+                app:layout_constraintBottom_toBottomOf="@+id/ageForm"
+                app:layout_constraintStart_toEndOf="@+id/ageForm"
+                app:layout_constraintTop_toTopOf="@+id/ageForm" />
+
+        </LinearLayout>
+
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
@@ -36,64 +136,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:inputType="number"
-            android:id="@+id/heightForm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Height"
-            app:layout_constraintBottom_toTopOf="@+id/weightForm"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="cm"
-            app:layout_constraintBottom_toBottomOf="@+id/heightForm"
-            app:layout_constraintStart_toEndOf="@+id/heightForm"
-            app:layout_constraintTop_toTopOf="@+id/heightForm" />
-
-        <EditText
-            android:inputType="number"
-            android:id="@+id/weightForm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:hint="Weight"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/heightForm" />
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="kg"
-            app:layout_constraintBottom_toBottomOf="@+id/weightForm"
-            app:layout_constraintStart_toEndOf="@+id/weightForm"
-            app:layout_constraintTop_toBottomOf="@+id/heightForm" />
-
-        <EditText
-            android:id="@+id/ageForm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:hint="Age"
-            android:inputType="number"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/weightForm" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Years"
-            app:layout_constraintBottom_toBottomOf="@+id/ageForm"
-            app:layout_constraintStart_toEndOf="@+id/ageForm"
-            app:layout_constraintTop_toBottomOf="@+id/weightForm" />
 
         <Button
             android:id="@+id/submitBtn2"
@@ -114,7 +158,7 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ageForm">
+            app:layout_constraintTop_toBottomOf="@id/linearLayout8">
 
             <RadioGroup
                 android:id="@+id/radioGroup"
@@ -126,13 +170,15 @@
                     android:id="@+id/maleRadio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Male" />
+                    android:text="Male"
+                    android:textColor="@color/black" />
 
                 <RadioButton
                     android:id="@+id/femaleRadio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Female" />
+                    android:text="Female"
+                    android:textColor="@color/black" />
 
             </RadioGroup>
 
@@ -140,6 +186,7 @@
 
         <RadioGroup
             android:id="@+id/activityRadioGroup"
+            android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
@@ -150,40 +197,45 @@
                 android:id="@+id/sedentaryRadio"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Sedentary"></RadioButton>
+                android:text="Sedentary"
+                android:textColor="#000000"/>
 
             <RadioButton
                 android:id="@+id/radioButton3"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Lightly Active" />
+                android:text="Lightly Active"
+                android:textColor="#000000" />
 
             <RadioButton
                 android:id="@+id/radioButton4"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Moderately Active" />
+                android:text="Moderately Active"
+                android:textColor="#000000" />
 
             <RadioButton
                 android:id="@+id/radioButton5"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Very Active" />
+                android:text="Very Active"
+                android:textColor="#000000" />
 
             <RadioButton
                 android:id="@+id/radioButton6"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Extra Active" />
+                android:text="Extra Active"
+                android:textColor="#000000" />
 
 
         </RadioGroup>
 
         <TextView
+            android:layout_marginTop="8dp"
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:text="Activity Level"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="#000000"
