--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -73,15 +73,24 @@
                 app:layout_constraintTop_toBottomOf="@+id/calorieProgressIndicator" />
 
 
+            <EditText
+                android:id="@+id/editCalorie"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:hint="kcal"
+                android:inputType="number"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <Button
                 android:id="@+id/calorieAddBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="+"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView">
-            </Button>
+                app:layout_constraintHorizontal_bias="0.714"
+                app:layout_constraintStart_toEndOf="@+id/editText"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -134,13 +143,20 @@
                 app:layout_constraintStart_toStartOf="@+id/stepProgressIndicator"
                 app:layout_constraintTop_toBottomOf="@+id/stepProgressIndicator" />
 
+            <EditText
+                android:id="@+id/editSteps"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:hint="steps"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+            
             <Button
                 android:id="@+id/stepAddBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="+"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView9"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
