--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,13 +14,13 @@
     <fragment
         android:id="@+id/navigation_progress"
         android:name="com.example.healthmaxx.ui.progress.ProgressFragment"
-        android:label="@string/title_dashboard"
+        android:label="Progress"
         tools:layout="@layout/fragment_progress" />
 
     <fragment
         android:id="@+id/navigation_mindfulness"
         android:name="com.example.healthmaxx.ui.mindfulness.MindfulnessFragment"
-        android:label="@string/title_notifications"
+        android:label="Notifications"
         tools:layout="@layout/fragment_mindfulness" />
     <fragment
         android:id="@+id/navigation_profile"
@@ -38,12 +38,12 @@
     <fragment
         android:id="@+id/foodDiaryFragment"
         android:name="com.example.healthmaxx.ui.foodDiary.FoodDiaryFragment"
-        android:label="fragment_food_diary"
+        android:label="Food diary"
         tools:layout="@layout/fragment_food_diary" />
     <fragment
         android:id="@+id/addFoodFragment"
         android:name="com.example.healthmaxx.ui.addFood.AddFoodFragment"
-        android:label="fragment_add_food"
+        android:label="Add food"
         tools:layout="@layout/fragment_add_food" />
     <fragment
         android:id="@+id/calculateBMR"
