added logo and also parsed calories from food diary to home fragment

--- a/app/src/main/res/layout/fragment_calculate_b_m_r.xml
+++ b/app/src/main/res/layout/fragment_calculate_b_m_r.xml
@@ -248,12 +248,13 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="226dp"
-        android:layout_height="67dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="300dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/healthmaxxing" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
